fix: Width issues on mobile

--- a/resources/static/styles.css
+++ b/resources/static/styles.css
@@ -84,6 +84,10 @@ dialog form {
 /* Settings for mobile devices */
 @media (pointer:none),
 (pointer:coarse) {
+    .container {
+        max-width: 100vw;
+    }
+
     .pure-control-group input {
         width: 98%;
     }
